# cube-tui

./: .justfile  2  Cargo.toml  GNUmakefile  README.md  \
src/: app.rs  cube.rs  lib.rs  main.rs  system_command.rs  timer.rs
src/global_rt/: mod.rs
src/text/: help.txt  welcome.txt
src/ui/: mod.rs
