[package]
name = "cube-tui"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []

[dependencies]
async-trait = "0.1"

clap = { version = "4.5.31", features = ["derive", "env"] }
color-eyre = "0.6.2"

crossterm = "0.26.1"
float-ord = "0.3.2"
futures = "0.3.30"
getopts = "0.2.21"
git2 = "0.18"

hostname = "0.3.1"
lazy_static = "1.5.0"
libp2p = { version = "0.54.1", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "async-std"] }
nostr-sdk = "0.37"
once_cell = "1.19.0"

ordered-float = "3.4.0"
rand = "0.8.5"
rand_derive = "0.5.0"
serde = { version = "1.0.164", features = [ "derive" ] }

tokio = { version = "1", features = ["full"] }
toml = "0.7.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

tui = "0.19.0"
tui-input = "0.11.1"

